@@ -2,7 +2,10 @@ ChangeLog
 ---------
 
 Version 2022.01.00-a5 - ??-???-2022:
-  - First change here.
+  - Fixed bug where relative #INCLUDE files could not be found when running
+    a symbolic link to an MMBasic file; the path to the #INCLUDE files was
+    incorrectly being resolved relative to the parent of the symbolic link
+    instead of the parent of the target file.
 
 Version 2022.01.00-a4 - 15-May-2022:
   - MMB4L is now open-source and licensed under a modified 4-clause BSD license
